fixed spacing

--- a/goodfood/styles/style.css
+++ b/goodfood/styles/style.css
@@ -161,6 +161,6 @@ footer .social img {
     margin-top: 20px;
 }
 .recipethree {
-    margin-top: 40px;
+    margin-top: 20px;
     grid-column: 4/10;
 }
